# secur_audit

./: .dockerignore  CMakeLists.txt  Dockerfile.client  Dockerfile.server  Makefile  README.md  docker-compose.yml  ports
.github/workflows/: ci.yml
certs/: generate_certs.sh  server.crt  server.key
client/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PortSearchModel.cpp  PortSearchModel.h  SecureClient.cpp  SecureClient.h  main_console.cpp  main_gui.cpp
common/: CMakeLists.txt  Protocol.cpp  Protocol.h
config/: server.conf
k8s/: deployment.yaml
server/: CMakeLists.txt  PortScanner.cpp  PortScanner.h  SecurityAuditor.cpp  SecurityAuditor.h  Server.cpp  Server.h  main.cpp
